- avoid Files.readString api unavailable on Android